# pencheff

./: .gitignore  README.md
.claude-plugin/: marketplace.json
plugins/pencheff/: .mcp.json  pyproject.toml
plugins/pencheff/.claude-plugin/: plugin.json
plugins/pencheff/agents/: pencheff.md
plugins/pencheff/pencheff/: __init__.py  __main__.py  config.py  server.py
plugins/pencheff/pencheff/core/: credentials.py  dependency_manager.py  findings.py  http_client.py  session.py  tool_runner.py
plugins/pencheff/pencheff/modules/: base.py
plugins/pencheff/pencheff/modules/advanced/: deserialization.py  websocket_security.py
plugins/pencheff/pencheff/modules/api/: api_fuzzer.py  rest_discovery.py
plugins/pencheff/pencheff/modules/auth/: brute_force.py  oauth_attacks.py  session_mgmt.py
plugins/pencheff/pencheff/modules/authz/: privilege_esc.py
plugins/pencheff/pencheff/modules/cloud/: s3_enum.py
plugins/pencheff/pencheff/modules/file_handling/: upload.py
plugins/pencheff/pencheff/modules/injection/: sqli.py  ssrf.py
plugins/pencheff/pencheff/modules/logic/: rate_limiting.py
plugins/pencheff/pencheff/modules/recon/: dns_enum.py  port_scan.py  subdomain.py  tech_fingerprint.py
plugins/pencheff/pencheff/modules/web/: headers.py  ssl_tls.py
plugins/pencheff/pencheff/reporting/: compliance.py  cvss.py  exporter.py  renderer.py
plugins/pencheff/skills/pentest/: SKILL.md
